--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
+            <div class="bg">
+            <div class="bgimage"></div>
+        </div>
   </body>
 </html>
