--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-
+       <p class="text-center" id="start-menu">
+         Blooket Hacks - monkxy
+          <br/>
+      Website is currently in dev phase, stand by!
+      <br/>
+      <br/>
+      <br/>
+      <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs">Join the Discord!</button></a><br />
+    </p>
   </body>
 </html>
