--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <br/>
       <br/>
       <br/>
-      <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs">Join the Discord!</button></a><br />
+      <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs">Join the Discord!</button></a><br/>
+         <br/>
+      <a href="monkxy.github.io"><button class="zoom" id="gs" style="background-color: #b625cc;"Go back to the main sight.</button></a>
+    </p>
     </p>
   </body>
 </html>
