--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <br/>
       <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs">Join the Discord!</button></a><br/>
          <br/>
-      <a href="monkxy.github.io"><button class="zoom" id="gs" style="background-color: #b625cc;"Go back to the main sight.</button></a>
+      <a href="monkxy.github.io"><button class="zoom" id="gs" style="background-color: #b625cc;">Go back to the main site.</button></a>
     </p>
     </p>
   </body>
