--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs">Join the Discord!</button></a><br/>
          <br/>
       <a href="https://monkxy.github.io"><button class="zoom" id="gs">Go back to the main site.</button></a><br/>
+         <br/>
+      <a href="https://monkxy.github.io"><button class="zoom" id="gs" onclick="copyToClipboard('if this is on your clipboard this works')">Test Button</button></a><br/>
     </p>
   </body>
 </html>
