--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <br/>
       <a href="https://monkxy.github.io"><button class="zoom" id="gs">Go back to the main site.</button></a><br/>
          <br/>
-      <a href="https://monkxy.github.io"><button class="zoom" id="gs" onclick="copyToClipboard('if this is on your clipboard this works')">Test Button</button></a><br/>
+<button class="zoom" id="gs" onclick="copyToClipboard('if this is on your clipboard this works')">Test Button</button><br/>
     </p>
   </body>
 </html>
