--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
          <br/>
       <a href="https://monkxy.github.io"><button class="zoom" id="gs">Go back to the main site.</button></a><br/>
          <br/>
-<button class="zoom" id="gs" onclick="copyToClipboard('if this is on your clipboard this works')">Test Button</button><br/>
+<button class="zoom" id="gs" onclick="copyToClipboard()">Test Button</button><br/>
          <script>
-           function copyToClipboard(element) {
-          var $temp = $("<input>");
-          $("body").append($temp);
-          $temp.val($(element).text()).select();
-          document.execCommand("copy");
-          $temp.remove();
+           function copyToClipboard() {
+          navigator.clipboard.writeText
+           ("if you're reading this the button worked -jude");
 }
          </script>
     </p>
