--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <p class="text-center" id="start-menu">
          Blooket Hacks - monkxy
           <br/>
-      Website is currently in dev phase, stand by!
+      Hello! This is a website with all of my Blooket hacks incase you cannot use my GitHub page, this is still a work in progress so let me know of any bugs or issues.
       <br/>
       <br/>
       <br/>
