--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <br/>
       <br/>
       <br/>
-      <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs">Join the Discord!</button></a><br/>
+      <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs" style="background-color: #00d5f2">Join the Discord!</button></a><br/>
          <br/>
-      <a href="global.html"><button class="zoom" id="gs">global scripts</button></a><br/>
+      <a href="global.html"><button class="zoom" id="gs" style="background-color: #00d5f2">global scripts</button></a><br/>
          <br/>
     </p>
   </body>
