--- a/global.html
+++ b/global.html
@@ -22,7 +22,7 @@
       <br/>
       <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs" style="background-color: #500b8c">Join the Discord!</button></a><br/>
          <br/>
-      <a href="https://monkxy.github.io/blooket-hacks"><button class="zoom" id="gs" style="background-color: #500b8c">Go back to the main site.</button></a><br/>
+      <a href="index.html"><button class="zoom" id="gs" style="background-color: #500b8c">Go back to the main site.</button></a><br/>
          <br/>
 <button class="zoom" id="gs" onclick="addRewardsCopy()" style="background-color: #00d5f2">addRewards.js</button><br/>
          <script>
