--- a/global.html
+++ b/global.html
@@ -16,8 +16,8 @@
        <p class="text-center" id="start-menu">
          Blooket Hacks - monkxy
           <br/>
-      Hello! This is a website with all of my Blooket hacks incase you cannot use my GitHub page, this is still a work in progress so let me know of any bugs or issues.
-      <br/>
+      These a scripts that can be used globally on blooket.
+         <br/>
       <br/>
       <br/>
       <a href="https://discord.gg/aeDraxAUpB"><button class="zoom" id="gs" style="background-color: #500b8c">Join the Discord!</button></a><br/>
