--- a/global.html
+++ b/global.html
@@ -16,7 +16,7 @@
        <p class="text-center" id="start-menu">
          Blooket Hacks - monkxy
           <br/>
-      These a scripts that can be used globally on blooket.
+      These scripts can be used globally on blooket.
          <br/>
       <br/>
       <br/>
